# ember__code

./: .gitignore  LICENSE  QUICKSTART.md  README.md  ember.md  pyproject.toml
agents/: architect.md  conversational.md  debugger.md  diagnostician.md  docs.md  editor.md  explorer.md  git.md  planner.md  qa.md  reviewer.md  security.md  simplifier.md
docs/: AGENTS.md  ARCHITECTURE.md  CODEINDEX.md  CONFIGURATION.md  DEVELOPMENT.md  EVALS.md  HOOKS.md  MCP.md  MIGRATION.md  ONBOARDING.md  SECURITY.md  SKILLS.md  TOOLS.md  VECTORBRIDGE.md
skills/update-docs/: SKILL.md
src/ember_code/: cli.py  init.py  pool.py  queue_hook.py
src/ember_code/auth/: __init__.py  client.py  credentials.py
src/ember_code/config/: __init__.py  api_keys.py  defaults.py  models.py  settings.py  tool_permissions.py
src/ember_code/hooks/: __init__.py  executor.py  loader.py  schemas.py
src/ember_code/knowledge/: __init__.py  embedder_registry.py  manager.py  vector_store.py
src/ember_code/mcp/: __init__.py  client.py  config.py  ide_detect.py  jetbrains.py  jetbrains_detect.py  server.py  tools.py  vscode.py  vscode_detect.py
src/ember_code/prompts/: main_agent.md  orchestrator.md
src/ember_code/scheduler/: __init__.py  models.py  parser.py  runner.py  store.py
tests/: conftest.py  test_hooks.py  test_ide_context.py  test_init.py  test_jetbrains_detect.py  test_jetbrains_mcp.py  test_knowledge.py  test_models.py  test_pool.py  test_scheduler.py  test_settings.py  test_tools.py  test_tui_handlers.py  test_vscode_detect.py  test_vscode_mcp.py  test_widgets.py
(+37 files in other folders)
